--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en-us">
   <head>
+      <title>Gradebook | edX</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   </head>
   <body>
     <div id="root"></div>
